# image-processor-1

tasks/admission/: admission.cpp
tasks/image_processor/: CMakeLists.txt  bmp.cpp  bmp.h  crop.cpp  crop.h  edgeDetection.cpp  edgeDetection.h  filter.cpp  filter.h  gaussianBlur.cpp  gaussianBlur.h  grayscale.cpp  grayscale.h  image_processor  image_processor.cpp  matrixFilter.cpp  matrixFilter.h  negative.cpp  negative.h  rainbowFilter.cpp  rainbowFilter.h  readme.md  sharpening.cpp  sharpening.h  test.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
