add_executable(
        image_processor
        image_processor.cpp
        bmp.cpp
        filter.h
        grayscale.cpp
        grayscale.h
        negative.h
        negative.cpp
        matrixFilter.h
        matrixFilter.cpp
        filter.cpp
        sharpening.h
        edgeDetection.h
        sharpening.cpp
        edgeDetection.cpp gaussianBlur.h gaussianBlur.cpp crop.h crop.cpp)
